--- a/templates/tenman/tenman_landing.html
+++ b/templates/tenman/tenman_landing.html
@@ -166,5 +166,10 @@
 
     }
 </style>
+<script>
+  $(document).ready(function(){
+      $('[data-toggle="tooltip"]').tooltip();   
+  });
+</script>
   {% endblock %}
 </html>
