--- a/templates/tenman/tenman_landing.html
+++ b/templates/tenman/tenman_landing.html
@@ -22,7 +22,7 @@
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
-          <strong>Success!</strong> {{ message }}
+           {{ message }}
         </div>          
     {% endfor %}
     </ul>
