Update placeholder in matches searchbar to correct date format

--- a/templates/tenman/matches.html
+++ b/templates/tenman/matches.html
@@ -18,7 +18,7 @@
                                     </div>
                                     <!--end of col-->
                                     <div class="col">
-                                        <input class="form-control form-control-lg form-control-borderless" type="search" placeholder="Search for match ID, map or date (i.e 14 Nov 2020)" id="livebox">
+                                        <input class="form-control form-control-lg form-control-borderless" type="search" placeholder="Search for match ID, map or date (i.e Nov 14 2020)" id="livebox">
                                       </div>
                                      
                                     <!--end of col-->
