--- a/templates/tenman/navbar.html
+++ b/templates/tenman/navbar.html
@@ -64,8 +64,11 @@
         <li class="nav-item {{navbar_status[2]}}">
           <a class="nav-link" href="/tenman/matches">Recorded Matches <span class="sr-only"></span></a>
         </li>
-       
-        <li class="nav-item ">          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">API</a>
+        <li class="nav-item {{navbar_status[3]}} ">
+          <a class="nav-link" href="/tenman/seasons" tabindex="-1" aria-disabled="true">Seasons<span class="badge badge-secondary" style="margin-left: 5px;">New</span></a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">API</a>
         </li>
       
       </ul>
