Make seasons background darker

--- a/templates/tenman/comming_soon.html
+++ b/templates/tenman/comming_soon.html
@@ -1,61 +1,23 @@
 <!DOCTYPE html>
 <html>
-<style>
-body, html {
-  height: 100%;
-  margin: 0;
-}
-
-.bgimg {
-  background-image: url('https://wallpaperaccess.com/full/1409296.jpg');
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  color: white;
-  font-family: "Courier New", Courier, monospace;
-  font-size: 25px;
-}
-
-.topleft {
-  position: absolute;
-  top: 0;
-  left: 16px;
-}
-
-.bottomleft {
-  position: absolute;
-  bottom: 0;
-  left: 16px;
-}
-
-.middle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-hr {
-  margin: auto;
-  width: 40%;
-}
-</style>
+<title>Seasons / Tenman Tracker</title>
+{% extends "tenman/navbar.html" %}
+{% block body %}
 <body>
 
 <div class="bgimg">
-  <div class="topleft">
+  <!--<div class="topleft">
     <p>Logo</p>
-  </div>
+  </div>-->
   <div class="middle">
-    <h1>COMING SOON</h1>
+    <h1>SEASONS COMING SOON</h1>
+    <p>It will be awesome!</p>
     <hr>
     <p id="demo" style="font-size:30px"></p>
   </div>
-  <div class="bottomleft">
+  <!--<div class="bottomleft">
     <p>Some text</p>
-  </div>
+  </div>-->
 </div>
 
 <script>
@@ -88,6 +50,51 @@ var countdownfunction = setInterval(function() {
   }
 }, 1000);
 </script>
-
+<style>
+    body, html {
+      height: 100%;
+      margin: 0;
+    }
+    
+    .bgimg {
+      background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/7529fe10-37db-4bc5-8d36-afeeaf4078d3/dahdue8-78d44e70-0429-4cea-be84-162d6ad4519f.png?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvNzUyOWZlMTAtMzdkYi00YmM1LThkMzYtYWZlZWFmNDA3OGQzXC9kYWhkdWU4LTc4ZDQ0ZTcwLTA0MjktNGNlYS1iZTg0LTE2MmQ2YWQ0NTE5Zi5wbmcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.lVVq-cWrM8GRhnAvc5yTy1Da6vaLUAbZliiCaZmRQxo');
+      height: 100%;
+      background-position: center;
+      background-size: cover;
+      position: relative;
+      color: white;
+      font-family: "Courier New", Courier, monospace;
+      font-size: 25px;
+    }
+    .bgimg img {
+        opacity: 0.5;
+    }
+    .topleft {
+      position: absolute;
+      top: 0;
+      left: 16px;
+    }
+    
+    .bottomleft {
+      position: absolute;
+      bottom: 0;
+      left: 16px;
+    }
+    
+    .middle {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+    }
+    
+    hr {
+      margin: auto;
+      width: 40%;
+    }
+    </style>
 </body>
+
+{% endblock %}
 </html>
